# jira_cloud_review

./: Cargo.toml  README.md
res/: index.css  index.js
src/: jira_api.rs  main.rs
